# pescheck-makemessages

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pescheck_makemessages/management/commands/: make_messages.py
